# 2021-Galaxio

./: .gitignore  README.md  build_starterpack.sh  building-a-bot.md  run.sh  terms_and_conditions.md
.github/workflows/: build.yml
ec-compose/: README.md  build.sh  docker-compose.yml
game-engine/: .gitignore  .gitlab-ci.yml  Dockerfile  GameEngine.sln  README.md  game-rules.md  payloads.md  run.sh  technical.md
game-engine/Engine/: Engine.csproj  Program.cs  appsettings.json
game-engine/EngineTests/: EngineTests.csproj  TestBase.cs  testConfig.json
game-engine/example-assets/: GameComplete_2021-02-26_07-27-25.json  GameStateLog_2021-03-07_04-37-06.json
game-logger/: .gitignore  .gitlab-ci.yml  Dockerfile  GameLogger.sln  README.md  run.sh
game-logger/Domain/: Domain.csproj
game-logger/Logger/: Logger.csproj  Program.cs  appsettings.Development.json  appsettings.json
game-runner/: .gitignore  .gitlab-ci.yml  Dockerfile  Game.md  GameRunner.sln  GameRunner.sln.DotSettings  README.md  build.sh  run-all.sh  run.sh
game-runner/.run/: Launch Game Engine with Components.run.xml
game-runner/Domain/: Domain.csproj
game-runner/GameRunner/: GameRunner.csproj  Program.cs  RunnerHub.cs  Startup.cs  appsettings.json
starter-bots/: .gitignore  .gitlab-ci.yml  README.md
starter-bots/JavaBot/: Dockerfile  pom.xml
starter-bots/JavascriptBot/: Dockerfile  javascript_StarterBot.js  package-lock.json  package.json
starter-bots/KotlinBot/: Dockerfile  README.md  pom.xml
starter-bots/NETCoreBot/: Dockerfile
starter-bots/cppBot/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp  signalr_client_docker_compile.cmake
starter-bots/cppBot/enums/: ObjectTypes.h  PlayerActions.h
starter-bots/cppBot/logger/: Logger.hpp
starter-bots/cppBot/models/: GameObject.h  GameState.h  PlayerAction.h  Position.h  World.h
starter-bots/cppBot/service/: BotService.cpp  BotService.hpp
starter-bots/cppBot/signalRHelper/: SignalRHelper.cpp  SignalRHelper.h
starter-bots/cppBot/uuid/: UUID.hpp
visualiser/: README.md
(+220 files in other folders)
